# 220201030-Character-Animation-Project

./: CMakeLists.txt  README.txt  loader_debug_report.txt  test_controller.cpp
.reference_compare/CENG-428---Character-Animation-main/: README.md
.reference_compare/CENG-428---Character-Animation-main/missions/: human_animation_loop.lua
.reference_compare/CENG-428---Character-Animation-main/src/: SimCharAnimNathanBalancedGaitPlugin.cpp
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake
build-vs18/: CMakeCache.txt
build-vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CharacterProject.sln  CharacterProject.vcxproj  CharacterProject.vcxproj.filters  CharacterProjectTest.vcxproj  CharacterProjectTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  student_character_plugin.sln
build-vs2022/CharacterProject.dir/Release/: CharacterProject.dll.recipe  character_plugin_ugurkan.dll.recipe
build-vs2022/CharacterProject.dir/Release/CharacterProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2022/CharacterProjectTest.dir/Release/: CharacterProjectTest.exe.recipe
build-vs2022/CharacterProjectTest.dir/Release/Characte.4DC4F78C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs2022/Release/: CharacterProjectTest.exp  CharacterProjectTest.lib
build-vs2022/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-vs2022/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs2022/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
final_submission/CharacterProject/: REFERENCE_COMPARISON_REPORT.md  controller.h  joint_controller.cpp  plugin.cpp
final_submission/CharacterProject/include/arkheon/character/: ICharacterController.h
include/: controller.h
